public/a/c/screen.css
/* ... */
img[width="336"][height="702"] {
  margin-bottom: 0; }

.split3_2-1.tall div.first figure:first-of-type {
  margin-bottom: 3.5%; }

figure a img {
  opacity: 1.0;
  filter: alpha(opacity=100);
  -webkit-transition: all 0.16s linear;
  -moz-transition: all 0.16s linear;
  -ms-transition: all 0.16s linear;
  -o-transition: all 0.16s linear;
  transition: all 0.16s linear;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden; }

figure a:hover img {
  opacity: .7;
  filter: alpha(opacity=70);
  -webkit-transition: all 0.16s linear;
  -moz-transition: all 0.16s linear;
  -ms-transition: all 0.16s linear;
  -o-transition: all 0.16s linear;
  transition: all 0.16s linear;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden; }

@media (max-width: 768px) {
  figure a:hover img {
    opacity: 1.0;
    filter: alpha(opacity=100); } }
.grid-block {
  margin-bottom: 28px;
  float: left;
  position: relative; }
  .grid-block a {
    display: block; }
  .grid-block img {
    margin: 0;
    height: auto; }
  .grid-block .figcaption {
    position: absolute;
    bottom: 0;
    width: 100%;
    max-width: 1190px; }
    .grid-block .figcaption:hover .block-caption, .grid-block .figcaption:focus .block-caption {
      background: #3b3b3b; }

@media (max-width: 768px) {
  .grid-block {
    display: block;
    width: 100% !important;
    text-align: center;
    float: none;
    margin-bottom: 0% !important; }

  .grid-block img {
    margin: 0 auto 0;
    width: 90%; }

  figure {
    margin-bottom: 26px !important; }

  figure.grid-block {
    margin-bottom: 26px !important; }

  .figcaption {
    position: relative !important;
    width: 90% !important;
    margin: 0 auto 0; }

  img + .caption, img + .figcaption {
    margin-top: 0px; } }
.block-caption {
  -webkit-transition: all 0.16s linear;
  -moz-transition: all 0.16s linear;
  -ms-transition: all 0.16s linear;
  -o-transition: all 0.16s linear;
  transition: all 0.16s linear;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  background: rgba(59, 59, 59, 0.7);
  padding: 10px 21px 7px; }
  .block-caption h3 {
    color: #fff;
    display: inline-block;
    margin: 0 15px 0 0;
    line-height: 1.2; }
  .block-caption em {
    white-space: nowrap;
    font-weight: 700; }
    @media (max-width: 840px) {
      .block-caption em {
        display: none; } }
  @media (max-width: 768px) {
    .block-caption {
      display: block;
      position: relative; } }

.block-caption-more {
  background: #fff;
  padding: 0 21px;
  overflow: hidden;
  max-height: 0;
  -webkit-transition: all 0.3s linear;
  -moz-transition: all 0.3s linear;
  -o-transition: all 0.3s linear;
  transition: all 0.3s linear; }
  .block-caption-more .meta {
    margin-top: 18px;
    color: #cecece;
    margin-bottom: 35px; }
  .block-caption-more p {
    max-width: 800px;
    color: #6e6e6e; }
    .block-caption-more p:last-of-type {
      margin-bottom: 28px; }
  @media (max-width: 768px) {
    .block-caption-more {
      display: none; } }

.block-caption-more.open {
  max-height: 500px;
  -webkit-transition: all 0.8s ease;
  -moz-transition: all 0.8s ease;
  -ms-transition: all 0.8s ease;
  -o-transition: all 0.8s ease;
  transition: all 0.8s ease; }

@media (max-width: 768px) {
  .block-caption-more.open, .block-caption-more {
    max-height: 500px; } }
.grid-carousel {
  max-width: 1190px;
  overflow: hidden; }
  .grid-carousel img {
    max-width: inherit; }

.adjunct-header:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
  font-size: 0; }
.adjunct-header ul {
  float: left;
  max-width: 65%;
  margin-top: 10px;
  margin-bottom: 8px; }
  .adjunct-header ul:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
    font-size: 0; }
  @media (max-width: 700px) {
    .adjunct-header ul {
      float: none;
      max-width: 100%; } }
.adjunct-header li {
  list-style: none;
  float: left; }
  .adjunct-header li:first-child {
    margin-left: 0; }
.adjunct-header .adjunct-link {
  margin: 16px 0 0;
  float: right;
  max-width: 25%; }
  .adjunct-header .adjunct-link a {
    text-decoration: none; }
    .adjunct-header .adjunct-link a:hover, .adjunct-header .adjunct-link a:focus {
      color: #3b3b3b; }
  @media (max-width: 700px) {
    .adjunct-header .adjunct-link {
      float: none;
      max-width: 100%; } }

.cards .col, .cards .grid-block {
  background: #fff;
  margin-bottom: 42px; }
  .cards .col > a, .cards .grid-block > a {
    display: block; }
.cards h3 {
  margin: 0 34px 0 34px;
  line-height: 1.5; }
.cards .cushion {
  margin-top: -14px;
  position: relative;
  padding: 15px 34px 25px 34px; }
  .cards .cushion .about-contacts {
    margin-bottom: 28px; }
    .cards .cushion .about-contacts:before {
      position: relative;
      left: 0;
      color: #939392; }
  .cards .cushion a.about-instagram {
    display: block;
    color: #939392;
    font-family: proxima-nova, sans-serif;
    font-size: 12px;
    font-weight: 600;
    letter-spacing: 2px; }
    .cards .cushion a.about-instagram .ss-social {
      position: relative;
      top: 3px;
      font-size: 14px;
      margin-right: 5px; }
  .cards .cushion a.about-instagram:hover {
    color: #000; }

.rsContent article p.meta {
  margin-bottom: 0; }

/*-------------------------------------------

   	 Work

-------------------------------------------*/
.see-more {
  display: none;
  background: #cecece url(../i/border-top.png) repeat-x 0 top;
  overflow: hidden; }
  .see-more .drawer {
    display: none; }
  .see-more h2 {
    text-align: center;
    margin: 0;
    padding-top: 5px; }
/* ... */

